# faintech-lab

./: .gitignore  .pr-body.md  .pre-commit-config.yaml  .vercelignore  .workflow-verification.md  AMC-FIX-001-FIX-SUMMARY.md  AMC-MVP-115-PROGRESS.md  CONTRIBUTING.md  DECISION-TRACKER.md  LAB-008-results.json  LAB-FINDINGS.md  LAB-SCOPE.md  P0_FIX_DEMO_URLS.md  README.md  SPRINT_STATE.json  experiment.ts  package-lock.json  package.json  results.tsv  tail  tsconfig.json  vercel.json  vitest.config.ts  workflow-config.json  workflow-output.json  workflow-test.js
.github/workflows/: ci.yml  deploy-pages.yml  publish-sdk.md  publish-sdk.yml  publish.yml  sdk-tests.yml
.openclaw/: skills  workspace-state.json
.tasks/: lab-006-global-memory.md  lab-008-single-agent-workflows.md
amc-backend/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  SECURITY_AUDIT_REPORT.md  TECH-DEBT.md  alembic.ini  amc.db  config.py  docker-compose.loadtest.yml  docker-compose.production.yml  main.py  requirements-test.txt  requirements.txt
amc-backend/alembic/: env.py
amc-backend/docs/: ERROR_HANDLING.md  LOAD-TEST-RUNBOOK.md  PGVECTOR-MIGRATION.md
amc-backend/load_tests/: README.md  (+4 more)
amc-frontend/: .env.example  AUTH_DIAGNOSIS.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
channels/: CHANNEL-HYPOTHESES.md  EXPERIMENT-METRICS-TEMPLATE.md  hn-launch-qw1-draft.md  qw1-baseline-metrics.md  qw1-comment-monitoring.md
data/: beta-tracker.json
docs/: DECISIONS.md  EVENT-TRACKING-IMPLEMENTATION-GUIDE.md  LAB-SCOPE.md  analytics-setup.md  analytics-tracking-implementation-2026-03-23.md  health-score-dashboard-template.md  openapi.yaml
memory/: 2026-03-05.md  2026-03-06.md  2026-03-10.md
public/: robots.txt  sitemap.xml
research/: agent-productivity-analysis-2026-03-17.md  ai-agent-performance-benchmarks-competitive-analysis-2026-03-17.md  benchmark-baseline-execution-template.md  benchmark-execution-framework.md  beta-channel-mapping-2026-03-17.md  lab-experiment-preparation-2026-03-20.md  lab-state-update-2026-03-17.md
scripts/: promote-cross-agent-patterns.js
sdks/: PUBLISHING.md
sdks/python/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
sdks/python/agentmemory/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: __init__.py  test_integration.py
seo/: analytics-setup-guide.md
tests/: README.md  memory-utils.test.ts  setup.ts
(+756 files in other folders)
