[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmemory"
version = "0.1.0"
description = "Python SDK for Agent Memory Cloud - Persistent memory infrastructure for AI agent fleets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Faintech Solutions SRL", email = "support@faintech.dev"}
]
maintainers = [
    {name = "Faintech Solutions SRL", email = "support@faintech.dev"}
]
keywords = [
    "ai",
    "agents",
    "memory",
    "persistent",
    "infrastructure",
    "llm",
    "chatgpt",
    "openai",
    "claude"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.urls]
Homepage = "https://faintech.dev"
Documentation = "https://docs.faintech.dev"
Repository = "https://github.com/eduardg7/faintech-lab"
Issues = "https://github.com/eduardg7/faintech-lab/issues"

[tool.setuptools]
packages = ["agentmemory"]

[tool.setuptools.package-dir]
agentmemory = "agentmemory"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "DTZ", "B", "Q"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
